--- a/frontend/src/components/CardMovie/CardMovie.css
+++ b/frontend/src/components/CardMovie/CardMovie.css
@@ -17,13 +17,37 @@
 .cardPpal{
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
  .imgMovie{
     width: 14rem;
+    border-radius: 0.4rem;
+    margin: 1rem;
  }
 
+.description{
+    text-align: justify;
+    margin: 1.2rem;
+}
+.buttons button{
+    margin: 0.2rem 0.6rem;
+    border-radius: 5px;
+    padding: 0.6rem 1.4rem; 
+    color: white;
+    background-color: transparent;
+    border: white solid;
+}
 
+.buttons button:hover{
+    transform: scale(1.1);
+    transition: 200ms ease-in-out;
+}
+
+.buttons .editButton{
+    color: black;
+    background-color: white;
+}
 
   /* ---MEDIA QUERIE --- */
 
@@ -41,13 +65,13 @@
         flex-direction: row;
     }
     .imgMovie{
-        width: 18rem;
+        width: 15rem;
      }
      .infoMovie{
         display: flex;
         text-align: left;
         gap: 20px;
-        margin: 1rem;
+        margin: 1.2rem;
      }
 
   }
@@ -62,7 +86,7 @@
         flex-direction: row;
     }
     .imgMovie{
-        width: 16rem;
+        width: 15rem;
      }
 
 
