--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -2,38 +2,39 @@
     background-color: #131313;
     color: white;
     width: 100%;
-    height: 100px;
+    height: 6rem;
     display: flex;
     justify-content: space-around;
     align-items: center;
     text-align: center;
+    position: absolute;
+    margin-bottom: 1rem;
 }
 
-.info {}
-
 .info h1 {
-    font-size: 20px;
+    font-size: 1rem;
     margin: 0px;
 
 }
 
 .info h2 {
-    font-size: 15px;
+    font-size: 0.9rem;
 }
 
 .icongr {
 
-    width: 30px;
-    height: 30px;
+    width: 2rem;
+    height: 2rem;
     cursor: pointer;
+    margin-bottom: 0.2rem;
 
 }
 
 .add {
     background: linear-gradient(90deg, rgba(0, 21, 142, 1) 0%, rgba(187, 14, 14, 1) 100%);
     border-radius: 50px;
-    width: 110px;
-    height: 35px;
+    width: 8rem;
+    height: 2rem;
     border: none;
     color: white;
 }
@@ -52,10 +53,35 @@
 /* QUERY TABLET */
 @media (min-width: 766px) {
     .head{
-        width: 200px;
-        height: 900px;
+        width: 7vh;
+        height: 100vh;
         flex-direction: column;
         justify-content: flex-start;
+        position: fixed;
+        left: 0;
+        top: 0;
+        bottom: 0;
+    }
+
+    .info h1 {
+        display: none;
+    }
+    
+    .info h2 {
+        display: none;
+    }
+    .head:hover{
+        width: 13vh;
+        transition: 300ms ease-in;
+        z-index: 1;
+    }
+
+    .info h1:hover {
+        display: flex;
+    }
+    
+    .info h2 {
+        display: none;
     }
     .info{
         width: 200px;
