--- a/frontend/src/components/CardMovie/CardMovie.css
+++ b/frontend/src/components/CardMovie/CardMovie.css
@@ -52,9 +52,35 @@
   /* ---MEDIA QUERIE --- */
 
   /* QUERY CELULAR LANDSCAPE Y TABLET */
-  @media (min-width:481px) {
+  @media (min-width:481px) and (max-width:768px) {
+    *{
+        font-size: 12px;
+    }
+    .card{
+        width: 90%;
+    }
+    .cardPpal{
+        display: flex;
+        flex-direction: row;
+    }
+    .imgMovie{
+        max-width: 90%;
+     }
+     .infoMovie{
+        display: flex;
+        text-align: left;
+        gap: 20px;
+        margin: 1.2rem;
+     }
+     .sideInfo{
+        max-width: 60%;
+     }
+  }
+  
+  @media (min-width:769px) {
     *{
         font-size: 16px;
+
     }
     .card{
         width: 90%;
@@ -75,7 +101,6 @@
      }
 
   }
-  
   /* QUERY DESKTOP */
   @media (min-width: 1023px) {
     *{
