--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,146 +1,148 @@
 .head {
-    background-color: #131313;
-    color: white;
-    width: 100%;
-    height: 6rem;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    text-align: center;
-    position: absolute;
-    margin-bottom: 1rem;
+  background-color: #131313;
+  color: white;
+  width: 100%;
+  height: 6rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  margin-bottom: 1rem;
 }
 
 .info h1 {
-    font-size: 1rem;
-    margin: 0px;
-
+  font-size: 1rem;
+  margin: 0px;
 }
 
 .info h2 {
-    font-size: 0.9rem;
+  font-size: 0.9rem;
 }
 
 .icongr {
-
-    width: 2rem;
-    height: 2rem;
-    cursor: pointer;
-    margin-bottom: 0.2rem;
-
+  width: 2rem;
+  height: 2rem;
+  cursor: pointer;
+  margin-bottom: 0.2rem;
 }
 
 .add {
-    background: linear-gradient(90deg, rgba(0, 21, 142, 1) 0%, rgba(187, 14, 14, 1) 100%);
-    border-radius: 50px;
-    width: 8rem;
-    height: 2rem;
-    border: none;
-    color: white;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 21, 142, 1) 0%,
+    rgba(187, 14, 14, 1) 100%
+  );
+  border-radius: 50px;
+  width: 8rem;
+  height: 2rem;
+  border: none;
+  color: white;
 }
 
 .add:hover {
-    background: linear-gradient(90deg, rgba(0, 21, 142, 0.692) 0%, rgba(187, 14, 14, 0.678) 100%);
-    color: white;
-    font-weight: 600;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 21, 142, 0.692) 0%,
+    rgba(187, 14, 14, 0.678) 100%
+  );
+  color: white;
+  font-weight: 600;
 }
 
 /* QUERY CELULAR */
 @media (max-width: 481px) {
-    
 }
 
 /* QUERY TABLET */
 @media (min-width: 766px) {
-    .head{
-        width: 7vh;
-        height: 100vh;
-        flex-direction: column;
-        justify-content: flex-start;
-        position: fixed;
-        left: 0;
-        top: 0;
-        bottom: 0;
-    }
+  .head {
+    width: 7vh;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: flex-start;
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+  }
 
-    .info h1 {
-        display: none;
-    }
-    
-    .info h2 {
-        display: none;
-    }
-    .head:hover{
-        width: 13vh;
-        transition: 300ms ease-in;
-        z-index: 1;
-    }
+  .info h1 {
+    display: none;
+  }
 
-    .info h1:hover {
-        display: flex;
-    }
-    
-    .info h2 {
-        display: none;
-    }
-    .info{
-        width: 200px;
-        height: 80px;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        margin: 30px 0;
-    }
-    .info h1{
-        font-size: 30px;
+  .info h2 {
+    display: none;
+  }
+  .head:hover {
+    width: 13vh;
+    transition: 300ms ease-in;
+    z-index: 1;
+  }
 
-    }
-    .info h2{
-        font-size: 20px;
-    }
-    .icongr{
-        width: 60px;
-        height: 60px;
-    }
-    .add{
-        width: 150px;
-        height: 50px;
-        font-size: 23px;
-    }
+  .info h1:hover {
+    display: flex;
+  }
+
+  .info h2 {
+    display: none;
+  }
+  .info {
+    width: 200px;
+    height: 80px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 30px 0;
+  }
+  .info h1 {
+    font-size: 30px;
+  }
+  .info h2 {
+    font-size: 20px;
+  }
+  .icongr {
+    width: 60px;
+    height: 60px;
+  }
+  .add {
+    width: 150px;
+    height: 50px;
+    font-size: 23px;
+  }
 }
 
 /* QUERY DESKTOP */
 @media (min-width: 1024px) {
-    .head{
-        width: 300px;
-        height: 900px;
-        flex-direction: column;
-        justify-content: flex-start;
-    }
-    .info{
-        width: 200px;
-        height: 80px;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        margin: 30px 0;
-    }
-    .info h1{
-        font-size: 40px;
-
-    }
-    .info h2{
-        font-size: 25px;
-    }
-    .icongr{
-        width: 80px;
-        height: 80px;
-    }
-    .add{
-        width: 170px;
-        height: 50px;
-        font-size: 25px;
-    }
+  .head {
+    width: 300px;
+    height: 900px;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .info {
+    width: 200px;
+    height: 80px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 30px 0;
+  }
+  .info h1 {
+    font-size: 40px;
+  }
+  .info h2 {
+    font-size: 25px;
+  }
+  .icongr {
+    width: 80px;
+    height: 80px;
+  }
+  .add {
+    width: 170px;
+    height: 50px;
+    font-size: 25px;
+  }
 }
