--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,7 +1,8 @@
 footer {
     background-image: linear-gradient(279deg, rgb(0, 66, 255), rgb(235, 0, 27));
     width: 100%;
-    z-index: 0;
+    position: relative;
+    bottom: 0;
   }
   
   footer ul {
