--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -7,10 +7,15 @@
     justify-content: space-around;
     align-items: center;
     text-align: center;
-    position: absolute;
-    margin-bottom: 1rem;
+    position: relative;
+    top: 0;
+    z-index: 1;
 }
 
+.logoDevflix{
+    width: 60%;
+    margin-left: 0rem;
+}
 .info h1 {
     font-size: 1rem;
     margin: 0px;
@@ -45,44 +50,14 @@
     font-weight: 600;
 }
 
-/* QUERY CELULAR */
-@media (max-width: 481px) {
-    
-}
-
 /* QUERY TABLET */
 @media (min-width: 766px) {
     .head{
-        width: 7vh;
-        height: 100vh;
-        flex-direction: column;
+        width:100%;
+        height: 10vh;
         justify-content: flex-start;
-        position: fixed;
-        left: 0;
-        top: 0;
-        bottom: 0;
-    }
-
-    .info h1 {
-        display: none;
     }
     
-    .info h2 {
-        display: none;
-    }
-    .head:hover{
-        width: 13vh;
-        transition: 300ms ease-in;
-        z-index: 1;
-    }
-
-    .info h1:hover {
-        display: flex;
-    }
-    
-    .info h2 {
-        display: none;
-    }
     .info{
         width: 200px;
         height: 80px;
@@ -113,9 +88,8 @@
 /* QUERY DESKTOP */
 @media (min-width: 1024px) {
     .head{
-        width: 300px;
-        height: 900px;
-        flex-direction: column;
+        width: 100%;
+        height: 15vh;
         justify-content: flex-start;
     }
     .info{
