--- a/frontend/src/pages/register.css
+++ b/frontend/src/pages/register.css
@@ -1,17 +1,28 @@
+.fondo{
+  background-image: url('./backgroundLogin.png');
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+}
+
+.Registrar {
+  margin: 0px auto;
+  border-radius: 40px;
+}
 .containerRegister {
-  margin: auto;
+  height: 500px;
+  margin: auto ;
   padding: 5px 15px 0;
   max-width: 450px;
   align-content: center;
-  margin-top: 10px;
-  background: rgb(215, 43, 127);
-  background: linear-gradient(
-    180deg,
-    rgba(215, 43, 127, 1),
-    rgba(255, 51, 75, 1),
-    rgba(151, 30, 208, 1)
-  );
+  background-image: linear-gradient(279deg, rgb(0, 66, 255), rgb(235, 0, 27));
   border-radius: 30px;
+  opacity: 0.9;
+}
+
+.row{
+height: 300px;
 }
 
 /*boton registro*/
@@ -97,17 +108,18 @@ button:active {
     left: 0;
     right: 0;
     display: flex;
-    padding: 15px;
+    margin-top: 100px;
+    padding: 10px;
 }
 
 
 @media only screen and (max-width: 420px) {
   .containerRegister {
+    height: 480px;
     margin: auto;
     padding: 15px;
     width: 290px;
     align-content: center;
-    margin-top: 120px;
     background: rgb(215, 43, 127);
     background: linear-gradient(
       180deg,
@@ -116,5 +128,81 @@ button:active {
       rgba(151, 30, 208, 1)
     );
     border-radius: 30px;
+  }
+  
+  .row{
+  height: 400px;
+  padding: 0;
+
+  }
+  .col{
+    padding: 0;
+    margin: 0;
+  }
+  .fondo{
+    background-image: url('./backgroundLogin.png');
+    background-size: contain;
+    background-repeat: repeat-y;
+    background-size: 100% 50%;
+    display: flex;
+  }
+  label{
+    font-size: 14px;
+  }
+
+  button {
+    font-family: inherit;
+    font-size: 18px;
+    background: #000;
+    color: white;
+    padding: 0.3em 1em;
+    padding-left: 0.9em;
+    display: flex;
+    align-items: center;
+    border: none;
+    border-radius: 46px;
+    overflow: hidden;
+    transition: all 0.2s;
+  }
+  .input {
+    display: block;
+    background-color: #212121;
+    width: 100%;
+    height: 20px;
+    padding: 10px ;
+    /* text-align: center; */
+    border: 2px solid white;
+    border-radius: 5px;
+   font-size: 12px;
+  }
+  .olvidar {
+    color: #fff;
+    justify-content: center;
+    left: 0;
+    right: 0;
+    display: flex;
+    margin-top:0px;
+    padding: 0px;
+    font-size: 12px;
+}
+}
+
+@media only screen and (min-width: 600px) and (max-width: 820px){
+  .fondo{
+    background-image: url('./backgroundLogin.png');
+    background-size:contain;
+    background-size: 100% 100%;
+    height: 100vh;
+    display: flex;
+  }
+}
+
+@media only screen and (min-width: 1080px) and (max-width: 1450px){
+  .fondo{
+    background-image: url('./backgroundLogin.png');
+    background-size:contain;
+    background-size: 100% 100%;
+    height: 100vh;
+    display: flex;
   }
 }
