--- a/frontend/src/components/CardMovie/CardMovie.css
+++ b/frontend/src/components/CardMovie/CardMovie.css
@@ -34,6 +34,13 @@
   text-align: justify;
   margin: 1.2rem;
 }
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+}
 .buttons button {
   margin: 0.2rem 0.6rem;
   border-radius: 5px;
@@ -41,6 +48,11 @@
   color: white;
   background-color: transparent;
   border: white solid;
+  width: 40%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  font-size: 1rem;
 }
 
 .buttons button:hover {
@@ -56,7 +68,7 @@
 /* ---MEDIA QUERIE --- */
 
   /* QUERY CELULAR LANDSCAPE Y TABLET */
-  @media (min-width:481px) and (max-width:768px) {
+  @media (min-width:481px) {
     *{
         font-size: 12px;
     }
@@ -71,9 +83,14 @@
         display: flex;
         flex-direction: row;
     }
-    .imgMovie{
-        max-width: 90%;
-     }
+    .buttons button {
+      width: 20%;
+      font-size: 1.3rem;
+    }
+    
+    .card img{
+      width: 65%;
+  }
      .infoMovie{
         display: flex;
         text-align: left;
@@ -93,6 +110,10 @@
     .card{
         width: 90%;
     }
+
+    .card img{
+      width: 65%;
+  }
     .titleMovie{
         margin: 1.4rem;
         font-size: 2.6rem;
@@ -117,7 +138,9 @@
     *{
         font-size: 20px;
     }
-
+    .card img{
+      width: 28%;
+  }
     .cardPpal{
         display: flex;
         flex-direction: row;
