--- a/frontend/src/pages/register.css
+++ b/frontend/src/pages/register.css
@@ -1,5 +1,5 @@
-.fondo{
-  background-image: url('./backgroundLogin.png');
+.fondo {
+  background-image: url("./backgroundLogin.png");
   background-size: cover;
   width: 100%;
   height: 100vh;
@@ -12,7 +12,7 @@
 }
 .containerRegister {
   height: 500px;
-  margin: auto ;
+  margin: auto;
   padding: 5px 15px 0;
   max-width: 450px;
   align-content: center;
@@ -21,8 +21,8 @@
   opacity: 0.9;
 }
 
-.row{
-height: 300px;
+.row {
+  height: 300px;
 }
 
 /*boton registro*/
@@ -86,7 +86,7 @@ button:active {
   background-color: #212121;
   width: 100%;
   height: 40px;
-  padding: 10px ;
+  padding: 10px;
   /* text-align: center; */
   border: 2px solid white;
   border-radius: 5px;
@@ -103,15 +103,14 @@ button:active {
 }
 
 .olvidar {
-    color: #fff;
-    justify-content: center;
-    left: 0;
-    right: 0;
-    display: flex;
-    margin-top: 100px;
-    padding: 10px;
+  color: #fff;
+  justify-content: center;
+  left: 0;
+  right: 0;
+  display: flex;
+  margin-top: 100px;
+  padding: 10px;
 }
-
 
 @media only screen and (max-width: 420px) {
   .containerRegister {
@@ -129,24 +128,25 @@ button:active {
     );
     border-radius: 30px;
   }
-  
-  .row{
-  height: 400px;
-  padding: 0;
 
+  .row {
+    height: 400px;
+    padding: 0;
   }
-  .col{
+  .col {
     padding: 0;
     margin: 0;
   }
-  .fondo{
-    background-image: url('./backgroundLogin.png');
-    background-size: contain;
-    background-repeat: repeat-y;
-    background-size: 100% 50%;
-    display: flex;
+  .fondo {
+    background-image: url("./backgroundLogin.png");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
-  label{
+
+  
+  label {
     font-size: 14px;
   }
 
@@ -169,11 +169,11 @@ button:active {
     background-color: #212121;
     width: 100%;
     height: 20px;
-    padding: 10px ;
+    padding: 10px;
     /* text-align: center; */
     border: 2px solid white;
     border-radius: 5px;
-   font-size: 12px;
+    font-size: 12px;
   }
   .olvidar {
     color: #fff;
@@ -181,28 +181,36 @@ button:active {
     left: 0;
     right: 0;
     display: flex;
-    margin-top:0px;
+    margin-top: 0px;
     padding: 0px;
     font-size: 12px;
-}
+  }
+
 }
 
-@media only screen and (min-width: 600px) and (max-width: 820px){
-  .fondo{
-    background-image: url('./backgroundLogin.png');
-    background-size:contain;
-    background-size: 100% 100%;
-    height: 100vh;
-    display: flex;
+@media only screen and (min-width: 600px) and (max-width: 820px) {
+  .fondo {
+    background-image: url("./backgroundLogin.png");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 }
 
-@media only screen and (min-width: 1080px) and (max-width: 1450px){
-  .fondo{
-    background-image: url('./backgroundLogin.png');
-    background-size:contain;
+@media only screen and (min-width: 1080px) and (max-width: 1450px) {
+  .fondo {
+    background-image: url("./backgroundLogin.png");
+    /* background-size:contain;
     background-size: 100% 100%;
     height: 100vh;
-    display: flex;
+    display: flex; */
+    background-attachment: fixed;
+
+    background-position: center;
+
+    background-repeat: no-repeat;
+
+    background-size: cover;
   }
 }
