--- a/frontend/src/components/CardMovie/CardMovie.css
+++ b/frontend/src/components/CardMovie/CardMovie.css
@@ -3,7 +3,7 @@
 }
 
 /* TARJETA COMPLETA */
-.card {
+.card2 {
   width: 80%;
   background-image: linear-gradient(279deg, rgb(0, 66, 255), rgb(235, 0, 27));
   opacity: 2;
@@ -11,6 +11,8 @@
   padding: 1rem;
   margin: 2rem auto;
   color: white;
+  opacity: 0.9  ;
+  border-radius: 20px;
 }
 
 .titleMovie{
@@ -72,8 +74,8 @@
     *{
         font-size: 12px;
     }
-    .card{
-        width: 90%;
+    .card2{
+        width: 70%;
     }
     .titleMovie{
         margin: 1.3rem;
@@ -88,7 +90,7 @@
       font-size: 1.3rem;
     }
     
-    .card img{
+    .card2 img{
       width: 65%;
   }
      .infoMovie{
@@ -102,16 +104,15 @@
      }
   }
   
-  @media (min-width:769px) {
+  @media (min-width:769px) and (max-width:1022px){
     *{
         font-size: 16px;
-
     }
-    .card{
-        width: 90%;
+    .card2{
+        width: 70%;
     }
 
-    .card img{
+    .card2 img{
       width: 65%;
   }
     .titleMovie{
@@ -138,7 +139,7 @@
     *{
         font-size: 20px;
     }
-    .card img{
+    .card2 img{
       width: 28%;
   }
     .cardPpal{
