--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -3,12 +3,14 @@ footer {
     width: 100%;
     position: relative;
     bottom: 0;
+    margin: 0;
   }
   
   footer ul {
     display: flex;
     padding: 1.8rem;
     justify-content: center;
+    margin: 0;
   }
   
   footer ul li {
