--- a/frontend/src/components/ListMovies/ListMovies.css
+++ b/frontend/src/components/ListMovies/ListMovies.css
@@ -62,6 +62,9 @@
   font-family: var(--titleText);
   font-size: 3vw; 
 }
+.text-muted {
+  color: white;
+}
 
 @media screen and (min-width: 575px) {
   .container_ListMovies {
