--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -12,68 +12,54 @@
     z-index: 1;
 }
 
-.logoDevflix{
+.logoDevflix {
     width: 60%;
     margin-left: 0rem;
 }
+
 .info h1 {
-  font-size: 1rem;
-  margin: 0px;
+    font-size: 1rem;
+    margin: 0px;
 }
 
 .info h2 {
-  font-size: 0.9rem;
+    font-size: 0.9rem;
 }
 
 .icongr {
-  width: 2rem;
-  height: 2rem;
-  cursor: pointer;
-  margin-bottom: 0.2rem;
+    width: 2rem;
+    height: 2rem;
+    cursor: pointer;
+    margin-bottom: 0.2rem;
 }
 
 .add {
-<<<<<<< HEAD
     background: linear-gradient(90deg, rgba(0, 21, 142, 1) 0%, rgba(187, 14, 14, 1) 100%);
     border-radius: 50px;
     width: 110px;
     height: 35px;
     border: none;
     color: white;
-    
-=======
-  background: linear-gradient(
-    90deg,
-    rgba(0, 21, 142, 1) 0%,
-    rgba(187, 14, 14, 1) 100%
-  );
-  border-radius: 50px;
-  width: 8rem;
-  height: 2rem;
-  border: none;
-  color: white;
->>>>>>> 6999f3f21464c505a24f1d446951c13096b0a4ed
+
 }
 
 .add:hover {
-  background: linear-gradient(
-    90deg,
-    rgba(0, 21, 142, 0.692) 0%,
-    rgba(187, 14, 14, 0.678) 100%
-  );
-  color: white;
-  font-weight: 600;
+    background: linear-gradient(90deg,
+            rgba(0, 21, 142, 0.692) 0%,
+            rgba(187, 14, 14, 0.678) 100%);
+    color: white;
+    font-weight: 600;
 }
 
 /* QUERY TABLET */
 @media (min-width: 766px) {
-    .head{
-        width:100%;
+    .head {
+        width: 100%;
         height: 10vh;
         justify-content: flex-start;
     }
-    
-    .info{
+
+    .info {
         width: 200px;
         height: 80px;
         display: flex;
@@ -82,18 +68,22 @@
         justify-content: center;
         margin: 30px 0;
     }
-    .info h1{
+
+    .info h1 {
         font-size: 30px;
 
     }
-    .info h2{
+
+    .info h2 {
         font-size: 20px;
     }
-    .icongr{
+
+    .icongr {
         width: 60px;
         height: 60px;
     }
-    .add{
+
+    .add {
         width: 150px;
         height: 50px;
         font-size: 23px;
@@ -102,12 +92,13 @@
 
 /* QUERY DESKTOP */
 @media (min-width: 1024px) {
-    .head{
+    .head {
         width: 100%;
         height: 15vh;
         justify-content: flex-start;
     }
-    .info{
+
+    .info {
         width: 200px;
         height: 80px;
         display: flex;
@@ -116,18 +107,22 @@
         justify-content: center;
         margin: 30px 0;
     }
-    .info h1{
+
+    .info h1 {
         font-size: 40px;
 
     }
-    .info h2{
+
+    .info h2 {
         font-size: 25px;
     }
-    .icongr{
+
+    .icongr {
         width: 80px;
         height: 80px;
     }
-    .add{
+
+    .add {
         width: 170px;
         height: 50px;
         font-size: 25px;
