--- a/frontend/src/pages/login.css
+++ b/frontend/src/pages/login.css
@@ -14,7 +14,7 @@
   max-width: 450px;
   align-content: center;
   opacity:0.9;
-  height: 320px;
+  height: 420px;
 }
 
 label {
@@ -99,13 +99,8 @@ button:active {
   transform: scale(0.95);
 }
 
-.olvidar {
+.olvidar1 {
   color: #fff;
-  justify-content: center;
-  left: 0;
-  right: 0;
-  display: flex;
-  padding: 15px;
 }
 
 @keyframes fly-1 {
@@ -137,6 +132,18 @@ button:active {
   transition: 0.1s;
   transition-property: box-shadow;
 }
+
+.olvidar1 {
+  color: #fff;
+  justify-content: center;
+  left: 0;
+  right: 0;
+  display: flex;
+  margin-top: 30px;
+  padding: 0px;
+  font-size: 12px;
+}
+
 @media only screen and (max-width: 420px) {
   .containerLogin {
     border-radius: 20px;
@@ -144,7 +151,7 @@ button:active {
     padding: 15px;
     max-width: 280px;
     align-content: center;
-    height: 240px;
+    height: 260px;
   }
 
   .Principal {
@@ -176,5 +183,39 @@ button:active {
     margin: 0px auto;
     border-radius: 40px;
   }
+
+  .olvidar1 {
+    color: #fff;
+    justify-content: center;
+    left: 0;
+    right: 0;
+    display: flex;
+    padding: 15px;
+    margin-top: 5px;
+  }
   
 }
+
+@media only screen and (min-width: 600px) and (max-width: 820px) {
+  
+  .olvidar1 {
+    color: #fff;
+    justify-content: center;
+    left: 0;
+    right: 0;
+    display: flex;
+    padding: 15px;
+    margin-top: 5px;
+  }
+
+  .containerLogin {
+    border-radius: 20px;
+    margin: auto;
+    padding: 15px;
+    max-width: 280px;
+    align-content: center;
+    height: 320px;
+  }
+
+}
+
