--- a/frontend/src/pages/register.css
+++ b/frontend/src/pages/register.css
@@ -11,7 +11,7 @@
   border-radius: 40px;
 }
 .containerRegister {
-  height: 500px;
+  height: 590px;
   margin: auto;
   padding: 5px 15px 0;
   max-width: 450px;
@@ -108,8 +108,9 @@ button:active {
   left: 0;
   right: 0;
   display: flex;
-  margin-top: 100px;
+  margin-top: 160px;
   padding: 10px;
+  font-size: 14px;
 }
 
 @media only screen and (max-width: 420px) {
@@ -196,6 +197,28 @@ button:active {
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+  .containerRegister {
+    height: 450px;
+    margin: auto;
+    padding: 5px 15px 0;
+    max-width: 450px;
+    align-content: center;
+    background-image: linear-gradient(279deg, rgb(0, 66, 255), rgb(235, 0, 27));
+    border-radius: 30px;
+    opacity: 0.9;
+  }
+
+  .olvidar {
+    color: #fff;
+    justify-content: center;
+    left: 0;
+    right: 0;
+    display: flex;
+    margin-top: 65px;
+    padding: 0px;
+    font-size: 12px;
+  }
 }
 
 @media only screen and (min-width: 1080px) and (max-width: 1450px) {
@@ -206,11 +229,8 @@ button:active {
     height: 100vh;
     display: flex; */
     background-attachment: fixed;
-
     background-position: center;
-
     background-repeat: no-repeat;
-
     background-size: cover;
   }
 }
