--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -2,16 +2,30 @@
     background-color: #131313;
     color: white;
     width: 100%;
-    height: 6rem;
+    height: 12rem;
     display: flex;
-    justify-content: space-around;
     align-items: center;
     text-align: center;
     position: relative;
     top: 0;
     z-index: 1;
 }
-
+.conta{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    flex-wrap: wrap;
+    
+}
+.logo{
+    width: 250px;
+    height: 80px;
+}
+.logo img {
+    width: 250px;
+    height: 80px;
+}
 .logoDevflix {
     width: 60%;
     margin-left: 0rem;
@@ -36,10 +50,12 @@
 .add {
     background: linear-gradient(90deg, rgba(0, 21, 142, 1) 0%, rgba(187, 14, 14, 1) 100%);
     border-radius: 50px;
-    width: 110px;
+    width: 120px;
     height: 35px;
     border: none;
     color: white;
+    font-size: 18px;
+    text-align: center;
 
 }
 
@@ -56,7 +72,7 @@
     .head {
         width: 100%;
         height: 10vh;
-        justify-content: flex-start;
+        
     }
 
     .info {
@@ -95,7 +111,7 @@
     .head {
         width: 100%;
         height: 15vh;
-        justify-content: flex-start;
+        
     }
 
     .info {
