--- a/frontend/src/pages/login.css
+++ b/frontend/src/pages/login.css
@@ -6,15 +6,25 @@
   display: flex;
 }
 
+.logodev{
+  width: 240px;
+  height: 80px;
+  position: fixed;
+  justify-content: center;
+  margin: 60px auto ;
+  left: 0;
+  right: 0;
+}
+
 .containerLogin {
   background-image: linear-gradient(279deg, rgb(0, 66, 255), rgb(235, 0, 27));
   border-radius: 20px;
   margin: auto;
   padding: 15px;
-  max-width: 450px;
+  width: 420px;
   align-content: center;
   opacity:0.9;
-  height: 420px;
+  height: 340px;
 }
 
 label {
@@ -101,6 +111,13 @@ button:active {
 
 .olvidar1 {
   color: #fff;
+  justify-content: center;
+  left: 0;
+  right: 0;
+  display: flex;
+  margin-top: 10px;
+  padding: 0px;
+  font-size: 14px;
 }
 
 @keyframes fly-1 {
@@ -133,16 +150,7 @@ button:active {
   transition-property: box-shadow;
 }
 
-.olvidar1 {
-  color: #fff;
-  justify-content: center;
-  left: 0;
-  right: 0;
-  display: flex;
-  margin-top: 30px;
-  padding: 0px;
-  font-size: 12px;
-}
+
 
 @media only screen and (max-width: 420px) {
   .containerLogin {
@@ -184,16 +192,6 @@ button:active {
     border-radius: 40px;
   }
 
-  .olvidar1 {
-    color: #fff;
-    justify-content: center;
-    left: 0;
-    right: 0;
-    display: flex;
-    padding: 15px;
-    margin-top: 5px;
-  }
-  
 }
 
 @media only screen and (min-width: 600px) and (max-width: 820px) {
@@ -212,7 +210,7 @@ button:active {
     border-radius: 20px;
     margin: auto;
     padding: 15px;
-    max-width: 280px;
+    width: 400px;
     align-content: center;
     height: 320px;
   }
