--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,146 +1,151 @@
 .head {
-    background-color: #131313;
-    color: white;
-    width: 100%;
-    height: 12rem;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    position: relative;
-    top: 0;
-    z-index: 1;
+  background-color: #131313;
+  color: white;
+  width: 100%;
+  height: 12rem;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  top: 0;
+  z-index: 1;
 }
-.conta{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    flex-wrap: wrap;
-    
+.conta {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  flex-wrap: wrap;
 }
-.logo{
-    width: 250px;
-    height: 80px;
+.logo {
+  width: 250px;
+  height: 80px;
 }
 .logo img {
-    width: 250px;
-    height: 80px;
+  width: 250px;
+  height: 80px;
 }
 .logoDevflix {
-    width: 60%;
-    margin-left: 0rem;
+  width: 60%;
+  margin-left: 0rem;
 }
 
 .info h1 {
-    font-size: 1rem;
-    margin: 0px;
+  font-size: 1rem;
+  margin: 0px;
 }
 
 .info h2 {
-    font-size: 0.9rem;
+  font-size: 0.9rem;
 }
 
 .icongr {
-    width: 2rem;
-    height: 2rem;
-    cursor: pointer;
-    margin-bottom: 0.2rem;
+  width: 2rem;
+  height: 2rem;
+  cursor: pointer;
+  margin-bottom: 0.2rem;
 }
 
 .add {
-    background: linear-gradient(90deg, rgba(0, 21, 142, 1) 0%, rgba(187, 14, 14, 1) 100%);
-    border-radius: 50px;
-    width: 120px;
-    height: 35px;
-    border: none;
-    color: white;
-    font-size: 18px;
-    text-align: center;
-
+  background: linear-gradient(
+    90deg,
+    rgba(0, 21, 142, 1) 0%,
+    rgba(187, 14, 14, 1) 100%
+  );
+  border-radius: 50px;
+  width: 120px;
+  height: 35px;
+  border: none;
+  color: white;
+  font-size: 18px;
+  text-align: center;
 }
 
 .add:hover {
-    background: linear-gradient(90deg,
-            rgba(0, 21, 142, 0.692) 0%,
-            rgba(187, 14, 14, 0.678) 100%);
-    color: white;
-    font-weight: 600;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 21, 142, 0.692) 0%,
+    rgba(187, 14, 14, 0.678) 100%
+  );
+  color: white;
+  font-weight: 600;
 }
 
 /* QUERY TABLET */
 @media (min-width: 766px) {
-    .head {
-        width: 100%;
-        height: 10vh;
-        
-    }
+  .head {
+    width: 100%;
+    height: 10vh;
+  }
 
-    .info {
-        width: 200px;
-        height: 80px;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        margin: 30px 0;
-    }
+  .info {
+    width: 200px;
+    height: 80px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 30px 0;
+  }
 
-    .info h1 {
-        font-size: 30px;
+  .info h1 {
+    font-size: 30px;
+  }
 
-    }
+  .info h2 {
+    font-size: 20px;
+  }
 
-    .info h2 {
-        font-size: 20px;
-    }
+  .icongr {
+    width: 60px;
+    height: 60px;
+  }
 
-    .icongr {
-        width: 60px;
-        height: 60px;
-    }
-
-    .add {
-        width: 150px;
-        height: 50px;
-        font-size: 23px;
-    }
+  .add {
+    width: 150px;
+    height: 50px;
+    font-size: 23px;
+  }
 }
 
 /* QUERY DESKTOP */
 @media (min-width: 1024px) {
-    .head {
-        width: 100%;
-        height: 15vh;
-        
-    }
+  .head {
+    width: 100%;
+    height: 15vh;
+    align-items: center;
+  }
+  .logo img {
+    width: 200px;
+    height: 70px;
+}
 
-    .info {
-        width: 200px;
-        height: 80px;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        margin: 30px 0;
-    }
+  .info {
+    width: 200px;
+    height: 60px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 30px 0;
+  }
 
-    .info h1 {
-        font-size: 40px;
+  .info h1 {
+    font-size: 40px;
+  }
 
-    }
+  .info h2 {
+    font-size: 25px;
+  }
 
-    .info h2 {
-        font-size: 25px;
-    }
+  .icongr {
+    width: 80px;
+    height: 80px;
+  }
 
-    .icongr {
-        width: 80px;
-        height: 80px;
-    }
-
-    .add {
-        width: 170px;
-        height: 50px;
-        font-size: 25px;
-    }
+  .add {
+    width: 170px;
+    height: 50px;
+    font-size: 25px;
+  }
 }
