--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -10,6 +10,12 @@
   top: 0;
   z-index: 1;
 }
+
+.modal-content {
+  padding: 0 20px;
+}
+
+
 .conta {
   display: flex;
   justify-content: space-around;
