--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -11,11 +11,6 @@
   z-index: 1;
 }
 
-.modal-content {
-  padding: 0 20px;
-}
-
-
 .conta {
   display: flex;
   justify-content: space-around;
@@ -112,6 +107,19 @@
     height: 50px;
     font-size: 23px;
   }
+}
+
+/* ---ESTILOS PARA EL FORMULARIO --- */
+
+.modal-content {
+  color: white;
+  opacity: 0.9;
+  padding: 0 30px;
+  background-image: linear-gradient(279deg, rgb(0, 66, 255), rgb(235, 0, 27));
+}
+
+.modal-header .modal-title label.form-label {
+  color: white;
 }
 
 /* QUERY DESKTOP */
