--- a/frontend/src/components/ListMovies/ListMovies.css
+++ b/frontend/src/components/ListMovies/ListMovies.css
@@ -53,17 +53,17 @@
   font-size: 2.5vw;
 }
 .card-title {
-  color: white;
+  color: black;
   font-family: var(--titleText); 
   font-size: 4vw; 
 }
 .card h6 {
-  color: white; 
+  color:black; 
   font-family: var(--titleText);
   font-size: 3vw; 
 }
 h6.text-muted {
-  color: white;
+  color:black;
 }
 
 @media screen and (min-width: 575px) {
