--- a/frontend/src/components/ListMovies/ListMovies.css
+++ b/frontend/src/components/ListMovies/ListMovies.css
@@ -3,6 +3,7 @@
   --titleText: "Quicksand", sans-serif;
   --text: "Saira", sans-serif;
 }
+
 .general-container {
   display: flex;
   align-items: center;
@@ -39,18 +40,23 @@
 .card {
   margin: 10px;
   padding: 5px;
-  width: 50vw;
+  width: 70vw;
 }
 .card img {
   width: 95%;
   margin: 2vw auto 0 auto;
 }
+
+.buttonsCardList{
+  display: flex;
+}
 .card button {
-  width: 100%;
+  width: 50%;
   background: linear-gradient(90deg, rgba(0,66,255,0.5) 0%, rgba(235,0,27,0.5) 100%);
   border: none;  
   font-family: var(--titleText);
   font-size: 2.5vw;
+  margin: 5px;
 }
 .card-title {
   color: white;
@@ -77,7 +83,7 @@ h6.text-muted {
     font-size: 2vw;
   }
   .card {
-    width: 18vw;
+    width: 27vw;
     border-width: 3px;
     border-style: solid;
     border-image: linear-gradient(to bottom, red, rgba(0, 0, 0, 0)) 1 100%;
