--- a/frontend/src/components/ListMovies/ListMovies.css
+++ b/frontend/src/components/ListMovies/ListMovies.css
@@ -3,9 +3,9 @@
   --titleText: "Quicksand", sans-serif;
   --text: "Saira", sans-serif;
 }
-.home{
+/* .home{
   height: 100%;
-}
+} */
 
 .general-container {
   display: flex;
