--- a/frontend/src/components/ListMovies/ListMovies.css
+++ b/frontend/src/components/ListMovies/ListMovies.css
@@ -31,6 +31,7 @@
 }
 .cardListPpal img {
   width: 65vw;
+  height: 450px;
   margin: auto;
 }
 .buttonsCardList {
@@ -77,7 +78,8 @@
     max-width: 20vw;
   } 
   .cardListPpal img {
-    width: 95%;    
+    width: 95%; 
+    height: 250px;   
   }
   .card button {
     width: 17vw;   
@@ -107,6 +109,7 @@
   }  
   .cardListPpal img {
     width: 95%;
+    height: 45vh;  
   }
   .card button {
     width: 12vw;  
