--- a/frontend/src/components/ListMovies/ListMovies.css
+++ b/frontend/src/components/ListMovies/ListMovies.css
@@ -51,7 +51,7 @@
 }
 
 .buttonsCardList{
-  display: flex;
+  text-align: center;
 }
 .card button {
   width: 50%;
@@ -60,6 +60,7 @@
   font-family: var(--titleText);
   font-size: 2.5vw;
   margin: 5px;
+  height: 20%;
 }
 .card-title {
   color: black;
